actualizando server.js config.js y package.js

--- a/shsh/package.json
+++ b/shsh/package.json
@@ -27,7 +27,7 @@
     "page": "^1.7.1",
     "passport": "^0.3.2",
     "pug": "^2.0.0-beta3",
-    "shsh-client": "maikol/shsh-client",
+    "shsh-client": "miuel/shsh/shsh-client",
     "superagent": "^2.1.0",
     "title": "^1.0.0",
     "yo-yo": "^1.2.2"
