--- a/shsh/package.json
+++ b/shsh/package.json
@@ -21,13 +21,17 @@
     "intl": "^1.2.4",
     "intl-messageformat": "^1.3.0",
     "intl-relativeformat": "^1.3.0",
+    "jsonwebtoken": "^7.1.9",
     "materialize-css": "^0.97.6",
     "multer": "^1.1.0",
     "multer-s3": "^2.3.2",
     "page": "^1.7.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta3",
     "shsh-client": "miuel/shsh/shsh-client",
+    "socket.io-client": "^1.5.0",
     "superagent": "^2.1.0",
     "title": "^1.0.0",
     "yo-yo": "^1.2.2"
