--- a/shsh-api/package.json
+++ b/shsh-api/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-runtime": "^6.11.6",
+    "gravatar": "^1.5.2",
     "http-hash": "^2.0.0",
     "jsonwebtoken": "^7.1.9",
     "micro": "^6.0.2",
